--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^12.6.0",
+    "lucide-react": "^0.554.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "firebase": "^10.7.0",
-    "lucide-react": "^0.292.0"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
